Fix depreciation